# TypstRAG

./: .gitignore  PLAN.md  README.md  pyproject.toml
_income/: typst_lancedb_rag_report.md
data/eval/: questions.jsonl  retrieval_report.jsonl
docs/: DEMO.md  PONYTAIL.md  RAG-SOURCES.md  RELEASE.md  UNIVERSE.md  USAGE.md
examples/academic-paper/: README.md  main.typ  refs.bib
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
prompts/: answer_system.md
scripts/: smoke.py
skills/typst-rag/: SKILL.md
src/typst_rag/: answer.py  build_index.py  chunk.py  cli.py  collect.py  config.py  embed.py  evaluate.py  fetch_typst.py  search.py
